raml-parser-2/src/test/resources/org/raml/v2/parser/invalid-type-inheritance/input.raml
#%RAML 1.0
title: My API With Types
types:
 Employee:
   type: UnexistentType
   properties:
     id:
       type: string